plugins/kotlin/idea/tests/testData/multiplatform/weaklyIncompatibleActualInIntermediateModule/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in middle module'")!>A<!> {
    fun f()
}
